example/invalid/semanticErr/struct&reference/wrongAccessMember.wacc
# access invalid member

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  struct a is
    int x;
    int y
  end
  struct a a = {1, 10};
  println (a.z)
end